Fix post date alignment

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -90,11 +90,6 @@ body {
       margin-bottom: 10px;
     }
   }
-
-  #post-date {
-    display: inline-block;
-    float: right;
-  }
 }
 
 #post-content {
